--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: flutter_sample_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  english_words: ^4.0.0
+  provider: ^6.1.2
+  intl: ^0.20.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
